# srs-worfklow-parsing

./: .gitignore  README.md  pyproject.toml  readme.md
src/data/: annotations.csv  generated_graphs.csv  requirements.csv  requirements_grouped.csv
src/scripts/: .env example  cache.pkl  caching.py  data_preparation.ipynb  evaluation.ipynb  evaluation_functions.py  generation.ipynb  llm_utils.py  plotting_utils.py
