[tool.poetry]
name = "llm-workflow-generation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "llm_workflow_generation"}]

[tool.poetry.dependencies]
python = ["3.11.1"]
scipy = "^1.13.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
ipdb = "^0.13.13"
langchain-openai = "^0.1.7"
python-dotenv = "^1.0.1"
langchain = "^0.2.0"
rich = "^13.7.1"
networkx = "^3.3"
matplotlib = "^3.9.0"
graphviz = "^0.20.3"
scikit-learn = "^1.4.2"
ipywidgets = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
